syntax = "proto3";

package proto;

option go_package = "ticket_booking_engine/package/userpb";

message User {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}